apps/media/sftpgo/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sftpgo
  namespace: sftpgo
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: gateway
  hostnames:
    - sftpgo.motherbox.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: sftpgo
          port: 80
          weight: 1
